--- a/html/angebot.html
+++ b/html/angebot.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/all.css">
-    <link rel="stylesheet" href="../css/angebot.css">
-    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/angebot.css">
+    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
     <title>Angebot</title>
 </head>
 
@@ -23,7 +23,7 @@
                     <div class="opening-times"></div>
                 </div>
                 <div class="img">
-                    <img src="/img/collage1.png" alt="Schule Hirschthal" class="img-text-container-img">
+                    <img src="/Mittagstisch/img/collage1.png" alt="Schule Hirschthal" class="img-text-container-img">
                 </div>
             </div>
             <div class="small-break"></div>
@@ -41,7 +41,7 @@
             <div class="small-break"></div>
             <div class="img-text-two">
                 <div class="img">
-                    <img src="/img/Mittagstisch-q.png" alt="Schule Hirschthal" class="img-text-container-img">
+                    <img src="/Mittagstisch/img/Mittagstisch-q.png" alt="Schule Hirschthal" class="img-text-container-img">
                 </div>
                 <div class="text">
                     <h1>Preise</h1> <br>
@@ -57,7 +57,7 @@
                     <h3>Kurzfristige An- und Abmeldung</h3>
                     <p>Kosten bei Anmeldung unter 7 Tagen pro Tag: + CHF 5.00</p>
                     <p>Kosten bei Abmeldung unter 7 Tagen pro Tag: Keine Rückerstattung</p><br>
-                    <a href="/files/TarifNeu.pdf">
+                    <a href="/Mittagstisch/files/TarifNeu.pdf">
                         <div class="title-signin button">
                             <p>Zum Tarifblatt</p>
                         </div>
