--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/all.css">
-    <link rel="stylesheet" href="/css/uber-uns.css">
-    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/uber-uns.css">
+    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
     <title>Über Uns</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <div class="vorstand-user">
                     <div class="vorstand-user-container">
                         <div class="vorstand-user-img">
-                            <img src="/img/people/silvia.png" alt="Margret Haidacher">
+                            <img src="/Mittagstisch/img/people/silvia.png" alt="Margret Haidacher">
                         </div>
                         <div class="vorstand-user-name">
                             <h2>Silvia Müller</h2>
@@ -33,7 +33,7 @@
                 <div class="vorstand-user">
                     <div class="vorstand-user-container">
                         <div class="vorstand-user-img">
-                            <img src="/img/people/irene_s.png" alt="Margret Haidacher">
+                            <img src="/Mittagstisch/img/people/irene_s.png" alt="Margret Haidacher">
                         </div>
                         <div class="vorstand-user-name">
                             <h2>Irene Schranz</h2>
@@ -43,7 +43,7 @@
                 <div class="vorstand-user">
                     <div class="vorstand-user-container">
                         <div class="vorstand-user-img">
-                            <img src="/img/people/carola.png" alt="Melanie Hauri">
+                            <img src="/Mittagstisch/img/people/carola.png" alt="Melanie Hauri">
                         </div>
                         <div class="vorstand-user-name">
                             <h2>Carola Bazalar-Gloor</h2>
@@ -62,7 +62,7 @@
                 <div class="vorstand-user">
                     <div class="vorstand-user-container">
                         <div class="vorstand-user-img">
-                            <img src="/img/people/margret.png" alt="Margret Haidacher">
+                            <img src="/Mittagstisch/img/people/margret.png" alt="Margret Haidacher">
                         </div>
                         <div class="vorstand-user-name">
                             <h2>Margret Haidacher</h2>
@@ -75,7 +75,7 @@
                 <div class="vorstand-user">
                     <div class="vorstand-user-container">
                         <div class="vorstand-user-img">
-                            <img src="/img/people/irene.png" alt="Irene Bärtschi">
+                            <img src="/Mittagstisch/img/people/irene.png" alt="Irene Bärtschi">
                         </div>
                         <div class="vorstand-user-name">
                             <h2>Irene Bärtschi</h2>
@@ -88,7 +88,7 @@
                 <div class="vorstand-user">
                     <div class="vorstand-user-container">
                         <div class="vorstand-user-img">
-                            <img src="/img/people/melanie.png" alt="Melanie Hauri">
+                            <img src="/Mittagstisch/img/people/melanie.png" alt="Melanie Hauri">
                         </div>
                         <div class="vorstand-user-name">
                             <h2>Melanie Hauri</h2>
