--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Mittagstisch/css/style.css">
     <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
     <title>Mittagstisch Hirschthal</title>
 </head>
 
@@ -40,18 +40,18 @@
                     </p>
                 </div>
                 <div class="img">
-                    <img src="/img/schule hirschthal.jpg" alt="Schule Hirschthal" class="img-text-container-img">
+                    <img src="/Mittagstisch/img/schule hirschthal.jpg" alt="Schule Hirschthal" class="img-text-container-img">
                 </div>
             </div>
             <div class="small-break"></div>
             <div class="img-text-two">
                 <div class="img">
-                    <img src="/img/spielplatz.jpg" alt="Schule Hirschthal" class="img-text-container-img">
+                    <img src="/Mittagstisch/img/spielplatz.jpg" alt="Schule Hirschthal" class="img-text-container-img">
                 </div>
                 <div class="text">
                     <h2>So sind wir für euch da...</h2>
                     <div class="opening-times"></div>
-                    <p>Für mehr Informationen schauen Sie bitte unsere <a href="/html/angebot.html">Angebotseite</a> an.
+                    <p>Für mehr Informationen schauen Sie bitte unsere <a href="/Mittagstisch/html/angebot.html">Angebotseite</a> an.
                     </p>
                 </div>
             </div>
