--- a/html/standort.html
+++ b/html/standort.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/standort.css">
-    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/standort.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
         integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin="" />
     <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/map.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="/Mittagstisch/js/map.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
         integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
     <title>Standort</title>
