--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -16,85 +16,19 @@
 <body>
     <header></header>
     <main>
-        <div class="vorstand">
+        <div class="team">
             <h1>Unser Team</h1>
-            <div class="small-break"></div>
-            <div class="vorstand-user-all">
-                <div class="vorstand-user">
-                    <div class="vorstand-user-container">
-                        <div class="vorstand-user-img">
-                            <img src="/Mittagstisch/img/people/silvia.png" alt="Margret Haidacher">
+            <div class="team-user-all">
+                <div class="team-user-container">
+                    <div class="team-user-img-text">
+                        <div class="team-user-img">
+                            <img src="/Mittagstisch/img/people/doris.png" alt="Team User Bild">
                         </div>
-                        <div class="vorstand-user-name">
-                            <h2>Silvia Müller</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="vorstand-user">
-                    <div class="vorstand-user-container">
-                        <div class="vorstand-user-img">
-                            <img src="/Mittagstisch/img/people/irene_s.png" alt="Margret Haidacher">
-                        </div>
-                        <div class="vorstand-user-name">
-                            <h2>Irene Schranz</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="vorstand-user">
-                    <div class="vorstand-user-container">
-                        <div class="vorstand-user-img">
-                            <img src="/Mittagstisch/img/people/carola.png" alt="Melanie Hauri">
-                        </div>
-                        <div class="vorstand-user-name">
-                            <h2>Carola Bazalar-Gloor</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="big-break"></div>
-        
-        <div class="vorstand">
-            <h1>Unser Vorstand</h1>
-            <div class="small-break"></div>
-            <div class="vorstand-user-all">
-                <div class="vorstand-user">
-                    <div class="vorstand-user-container">
-                        <div class="vorstand-user-img">
-                            <img src="/Mittagstisch/img/people/margret.png" alt="Margret Haidacher">
-                        </div>
-                        <div class="vorstand-user-name">
-                            <h2>Margret Haidacher</h2>
-                            <div class="vorstand-user-profession">
-                                <h4>Präsidentin</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="vorstand-user">
-                    <div class="vorstand-user-container">
-                        <div class="vorstand-user-img">
-                            <img src="/Mittagstisch/img/people/irene.png" alt="Irene Bärtschi">
-                        </div>
-                        <div class="vorstand-user-name">
-                            <h2>Irene Bärtschi</h2>
-                            <div class="vorstand-user-profession">
-                                <h4>Vizepräsidentin</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="vorstand-user">
-                    <div class="vorstand-user-container">
-                        <div class="vorstand-user-img">
-                            <img src="/Mittagstisch/img/people/melanie.png" alt="Melanie Hauri">
-                        </div>
-                        <div class="vorstand-user-name">
-                            <h2>Melanie Hauri</h2>
-                            <div class="vorstand-user-profession">
-                                <h4>Administration</h4>
-                            </div>
+                        <div class="team-user-text">
+                            <h1>Carola</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam libero nisl, malesuada nec nibh hendrerit, bibendum finibus enim. Proin eu elementum lectus. Nullam tempus, ante et fringilla tempus, orci purus ornare neque, nec pulvinar leo justo a est.
+                            </p>
                         </div>
                     </div>
                 </div>
