Added new Pictures, edited home page

--- a/index.html
+++ b/index.html
@@ -5,97 +5,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mittagstisch/css/style.css">
-    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/all.css">
+    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="/js/main.js"></script>
     <title>Mittagstisch Hirschthal</title>
 </head>
 
 <body>
-    <header></header>
-    <div class="title-page">
-        <div class="name-start">
-            <h1 class="title-name">
-                Mittagstisch der Gemeinde Hirschthal
-            </h1>
-            <div class="small-break"></div>
-            <div class="title-signin button-signin">
+<header></header>
+<div class="title-page">
+    <div class="name-start">
+        <h1 class="title-name">
+            Mittagstisch der Gemeinde Hirschthal
+        </h1>
+        <div class="small-break"></div>
+        <div class="title-signin button-signin">
+            <p>JETZT ANMELDEN</p>
+        </div>
+    </div>
+    <div class="title-img"></div>
+</div>
+<main>
+    <div class="big-break"></div>
+    <div class="img-text-container">
+        <div class="img-text-one">
+            <div class="text">
+                <h1 class="animated-title">Willkommen</h1>
+                <p class="img-text-container-text">
+                    Unser Mittagstisch und die Randstundenbetreuung stehen allen Kindergarten- und
+                    Primarschulkindern zur Verfügung. Sie können sich für ein Quartal, ein Semester oder flexibel
+                    anmelden. Die Betreuungsangebote sind während schulfreien Tagen und den Ferien geschlossen.
+                </p>
+            </div>
+            <div class="img">
+                <img src="/img/Outdoor%20Dining.png" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+            </div>
+        </div>
+        <div class="small-break"></div>
+        <div class="img-text-two">
+            <div class="img">
+                <img src="/img/Muffins%20from%20Proton%20Mail.JPG" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+            </div>
+            <div class="text">
+                <h2 class="animated-title">So sind wir für euch da...</h2>
+                <div class="opening-times"></div>
+                <p>Für mehr Informationen schauen Sie bitte unsere <a href="/html/angebot.html" class="animated-link">Angebotseite</a> an.</p>
+            </div>
+        </div>
+    </div>
+    <div class="big-break"></div>
+    <div class="banner-offer">
+        <div class="banner-offer-text">
+            <h1>Entdecken Sie jetzt unser Angebot!</h1>
+            <p>
+                Der Verein "Mittagstisch der Gemeinde Hirschthal" bietet einen Mittagstisch speziell für
+                Kindergarten- und Primarschulkinder an. Unsere Betreuung kümmert sich um die Kinder während der
+                Mittagszeit und serviert ihnen eine ausgewogene und warme Mahlzeit.
+            </p>
+        </div>
+        <div class="banner-offer-button">
+            <div class="big-break"></div>
+            <div class="title-signin button button-signin">
                 <p>JETZT ANMELDEN</p>
             </div>
+            <div class="big-break"></div>
         </div>
-        <div class="title-img"></div>
     </div>
-    <main>
-        <div class="big-break"></div>
-        <div class="img-text-container">
-            <div class="img-text-one">
-                <div class="text">
-                    <h1>Willkommen</h1>
-                    <p class="img-text-container-text">
-                        Unser Mittagstisch und die Randstundenbetreuung stehen allen Kindergarten- und
-                        Primarschulkindern zur Verfügung. Sie können sich für ein Quartal, ein Semester oder flexibel
-                        anmelden. Die Betreuungsangebote sind während schulfreien Tagen und den Ferien geschlossen.
-                    </p>
-                </div>
-                <div class="img">
-                    <img src="/Mittagstisch/img/schule hirschthal.jpg" alt="Schule Hirschthal" class="img-text-container-img">
-                </div>
+    <div class="big-break"></div>
+    <div class="rules">
+        <a href="/files/Richtlinien.pdf" class="animated-link">
+            <div class="title-signin button animated-button">
+                <p>Zu den Richtlinien</p>
             </div>
-            <div class="small-break"></div>
-            <div class="img-text-two">
-                <div class="img">
-                    <img src="/Mittagstisch/img/spielplatz.jpg" alt="Schule Hirschthal" class="img-text-container-img">
-                </div>
-                <div class="text">
-                    <h2>So sind wir für euch da...</h2>
-                    <div class="opening-times"></div>
-                    <p>Für mehr Informationen schauen Sie bitte unsere <a href="/Mittagstisch/html/angebot.html">Angebotseite</a> an.
-                    </p>
-                </div>
-            </div>
+        </a>
+        <div class="rules-text">
+            <h1 class="animated-title">Richtlinien für ein tolles Miteinander</h1>
+            <p>
+                Gemeinsam stark am Mittagstisch! Unsere Richtlinien fördern eine herzliche Atmosphäre, in der das
+                Wohl aller Kinder an erster Stelle steht. Wir setzen auf Vertrauen, Rücksichtnahme und gewaltfreie
+                Konfliktlösung, sodass sich niemand ausgeschlossen fühlt. Bei uns werden Handys nur mit elterlicher
+                Zustimmung erlaubt, aber Laptops sind für Hausaufgaben willkommen. Beim Essen achten wir auf
+                Anstandsregeln und Teilen. Spiele, Hausaufgaben und kreative Aktivitäten sind erlaubt, und wir alle
+                helfen beim Aufräumen. Hier ist ein Ort des Miteinanders, wo jedes Kind sich wohl und willkommen
+                fühlt.
+            </p>
         </div>
-        <div class="big-break"></div>
-        <div class="banner-offer">
-            <div class="banner-offer-text">
-                <h1>Entdecken Sie jetzt unser Angebot!</h1>
-                <p>
-                    Der Verein "Mittagstisch der Gemeinde Hirschthal" bietet einen Mittagstisch speziell für
-                    Kindergarten- und Primarschulkinder an. Unsere Betreuung kümmert sich um die Kinder während der
-                    Mittagszeit und serviert ihnen eine ausgewogene und warme Mahlzeit.
-                </p>
-            </div>
-            <div class="banner-offer-button">
-                <div class="big-break"></div>
-                <div class="title-signin button button-signin">
-                    <p>JETZT ANMELDEN</p>
-                </div>
-                <div class="big-break"></div>
-            </div>
-        </div>
-        <div class="big-break"></div>
-        <div class="rules">
-            <a href="/files/Richtlinien.pdf">
-                <div class="title-signin button">
-                    <p>Zu den Richtlinien</p>
-                </div>
-            </a>
-            <div class="rules-text">
-                <h1>Richtlinien für ein tolles Miteinander</h1>
-                <p>
-                    Gemeinsam stark am Mittagstisch! Unsere Richtlinien fördern eine herzliche Atmosphäre, in der das
-                    Wohl aller Kinder an erster Stelle steht. Wir setzen auf Vertrauen, Rücksichtnahme und gewaltfreie
-                    Konfliktlösung, sodass sich niemand ausgeschlossen fühlt. Bei uns werden Handys nur mit elterlicher
-                    Zustimmung erlaubt, aber Laptops sind für Hausaufgaben willkommen. Beim Essen achten wir auf
-                    Anstandsregeln und Teilen. Spiele, Hausaufgaben und kreative Aktivitäten sind erlaubt, und wir alle
-                    helfen beim Aufräumen. Hier ist ein Ort des Miteinanders, wo jedes Kind sich wohl und willkommen
-                    fühlt.
-                </p>
-            </div>
-        </div>
-    </main>
-    <footer></footer>
+    </div>
+</main>
+<footer></footer>
 </body>
 
 </html>
