Changed About Page to more playful site

--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -5,37 +5,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="stylesheet" href="/Mittagstisch/css/uber-uns.css">
-    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="/css/uber-uns.css">
+    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="/js/main.js"></script>
     <title>Über Uns</title>
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <div class="team">
-            <h1>Unser Team</h1>
-            <div class="team-user-all">
+<header></header>
+<main>
+    <div class="team">
+        <h1>Unser Team</h1>
+        <div class="small-break"></div>
+        <div class="team-user-all">
+            <div class="team-user">
                 <div class="team-user-container">
-                    <div class="team-user-img-text">
-                        <div class="team-user-img">
-                            <img src="/Mittagstisch/img/people/doris.png" alt="Team User Bild">
-                        </div>
-                        <div class="team-user-text">
-                            <h1>Carola</h1>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam libero nisl, malesuada nec nibh hendrerit, bibendum finibus enim. Proin eu elementum lectus. Nullam tempus, ante et fringilla tempus, orci purus ornare neque, nec pulvinar leo justo a est.
-                            </p>
-                        </div>
+                    <div class="team-user-img">
+                        <img src="/img/people/silvia.png" alt="Silvia Müller">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Silvia Müller</h2>
+                        <p class="team-user-title">Unsere Frühaufsteherin</p>
+                        <p>Bevor sie die «Early Birds» um 6.30 Uhr entgegennimmt, <br>
+                            war sie schon mit ihrem Hund Sueno unterwegs.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-user">
+                <div class="team-user-container">
+                    <div class="team-user-img">
+                        <img src="/img/people/irene_s.png" alt="Irene Schranz">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Mägi Hauri</h2>
+                        <p class="team-user-title">Sie weiss wie der Hase läuft.</p>
+                        <p>Ist für alle möglichen und unmöglichen Situationen gewappnet.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-user">
+                <div class="team-user-container">
+                    <div class="team-user-img">
+                        <img src="/img/people/carola.png" alt="Carola Bazalar-Gloor">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Carola Bazalar-Gloor</h2>
+                        <p class="team-user-title">Immer flexibel und bereit</p>
+                        <p>Braucht nur eine kleine Pause um mit ihrem Hund Rocky eine Runde zu drehen.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-user">
+                <div class="team-user-container">
+                    <div class="team-user-img">
+                        <img src="/img/people/melanie.png" alt="Melanie Hauri">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Melanie Hauri (Vorstand)</h2>
+                        <p class="team-user-title">Unser Backoffice</p>
+                        <p>Alles wird still, leise und souverän im Hintergrund erledigt.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-user">
+                <div class="team-user-container">
+                    <div class="team-user-img">
+                        <img src="/img/people/irene.png" alt="Irene Bärtschi">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Irene Bärtschi (Vorstand)</h2>
+                        <p class="team-user-title">Unsere Korrekturleserin</p>
+                        <p>Pflegt den Kontakt zu unseren Behörden. <br> Springt ein, wenn es wirklich «brennt»!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-user">
+                <div class="team-user-container">
+                    <div class="team-user-img">
+                        <img src="/img/people/margret.png" alt="Margret Haidacher">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Margret Haidacher (Vorstand)</h2>
+                        <p class="team-user-title">Probiert das Essen so zu wählen, dass alle Bäuchlein glücklich sind.</p>
+                        <p>Eine echte Herausforderung, der sie sich gerne stellt.</p>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
-    <footer></footer>
+    </div>
+</main>
+<footer></footer>
 </body>
 
 </html>
