Added functions for hover and click

--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -48,10 +48,10 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/carola.png" alt="Carola Bazalar-Gloor">
+                        <img src="/img/people/carola.png" alt="Carola Bazalar">
                     </div>
                     <div class="team-user-name">
-                        <h2>Carola Bazalar-Gloor</h2>
+                        <h2>Carola Bazalar</h2>
                         <p class="team-user-title">Immer flexibel und bereit</p>
                         <p>Braucht nur eine kleine Pause um mit ihrem Hund Rocky eine Runde zu drehen.</p>
                     </div>
@@ -88,8 +88,9 @@
                     </div>
                     <div class="team-user-name">
                         <h2>Margret Haidacher (Vorstand)</h2>
-                        <p class="team-user-title">Probiert das Essen so zu wählen, dass alle Bäuchlein glücklich sind.</p>
-                        <p>Eine echte Herausforderung, der sie sich gerne stellt.</p>
+                        <p>
+                            Probiert das Essen so zu wählen, dass alle Bäuchlein glücklich sind. <br>
+                            Eine echte Herausforderung, der sie sich gerne stellt.</p>
                     </div>
                 </div>
             </div>
