added new pictures

--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -36,7 +36,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/irene_s.png" alt="Irene Schranz">
+                        <img src="/img/people/maegi.jpg" alt="Mägi Hauri">
                     </div>
                     <div class="team-user-name">
                         <h2>Mägi Hauri</h2>
