--- a/html/angebot.html
+++ b/html/angebot.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/all.css">
-    <link rel="stylesheet" href="/css/angebot.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/angebot.css">
     <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
     <title>Angebot</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <div class="opening-times"></div>
             </div>
             <div class="img">
-                <img src="/img/collage1.png" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+                <img src="/Mittagstisch/img/collage1.png" alt="Schule Hirschthal" class="img-text-container-img animated-img">
             </div>
         </div>
         <div class="small-break"></div>
@@ -40,7 +40,7 @@
         <h1 class="animated-title">Preise</h1>
         <div class="img-text-two">
             <div class="img">
-                <img src="/img/meal-g8bbb35c02_1920.jpg" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+                <img src="/Mittagstisch/img/meal-g8bbb35c02_1920.jpg" alt="Schule Hirschthal" class="img-text-container-img animated-img">
             </div>
             <div class="text">
                 <div class="price-table">
