--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/all.css">
-    <link rel="stylesheet" href="/css/uber-uns.css">
-    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/uber-uns.css">
+    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
     <title>Über Uns</title>
 </head>
 
@@ -23,7 +23,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/silvia.png" alt="Silvia Müller">
+                        <img src="/Mittagstisch/img/people/silvia.png" alt="Silvia Müller">
                     </div>
                     <div class="team-user-name">
                         <h2>Silvia Müller</h2>
@@ -36,7 +36,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/maegi.jpg" alt="Mägi Hauri">
+                        <img src="/Mittagstisch/img/people/maegi.jpg" alt="Mägi Hauri">
                     </div>
                     <div class="team-user-name">
                         <h2>Mägi Hauri</h2>
@@ -48,7 +48,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/carola.png" alt="Carola Bazalar">
+                        <img src="/Mittagstisch/img/people/carola.png" alt="Carola Bazalar">
                     </div>
                     <div class="team-user-name">
                         <h2>Carola Bazalar</h2>
@@ -60,7 +60,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/melanie.png" alt="Melanie Hauri">
+                        <img src="/Mittagstisch/img/people/melanie.png" alt="Melanie Hauri">
                     </div>
                     <div class="team-user-name">
                         <h2>Melanie Hauri (Vorstand)</h2>
@@ -72,7 +72,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/irene.png" alt="Irene Bärtschi">
+                        <img src="/Mittagstisch/img/people/irene.png" alt="Irene Bärtschi">
                     </div>
                     <div class="team-user-name">
                         <h2>Irene Bärtschi (Vorstand)</h2>
@@ -84,7 +84,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/img/people/margret.png" alt="Margret Haidacher">
+                        <img src="/Mittagstisch/img/people/margret.png" alt="Margret Haidacher">
                     </div>
                     <div class="team-user-name">
                         <h2>Margret Haidacher (Vorstand)</h2>
