--- a/html/impressum.html
+++ b/html/impressum.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="shortcut icon" href="/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="/Mittagstisch/js/main.js"></script>
     <title>Impressum</title>
