--- a/html/angebot.html
+++ b/html/angebot.html
@@ -23,7 +23,7 @@
                 <div class="opening-times"></div>
             </div>
             <div class="img">
-                <img src="/Mittagstisch/img/collage1.png" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+                <img src="/Mittagstisch/img/drawing.jpg" alt="drawing" class="img-text-container-img animated-img">
             </div>
         </div>
         <div class="small-break"></div>
@@ -40,7 +40,7 @@
         <h1 class="animated-title">Preise</h1>
         <div class="img-text-two">
             <div class="img">
-                <img src="/Mittagstisch/img/meal-g8bbb35c02_1920.jpg" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+                <img src="/Mittagstisch/img/Kekse.jpg" alt="Kekse" class="img-text-container-img animated-img">
             </div>
             <div class="text">
                 <div class="price-table">
@@ -69,12 +69,12 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="short-notice">
+                    <h3 class="animated-title">Kurzfristige An- und Abmeldung</h3>
+                    <p>Kosten bei Anmeldung unter 7 Tagen pro Tag: + CHF 5.00</p>
+                    <p>Kosten bei Abmeldung unter 7 Tagen pro Tag: Keine Rückerstattung</p>
+                </div>
             </div>
-        </div>
-        <div class="short-notice">
-            <h3 class="animated-title">Kurzfristige An- und Abmeldung</h3>
-            <p>Kosten bei Anmeldung unter 7 Tagen pro Tag: + CHF 5.00</p>
-            <p>Kosten bei Abmeldung unter 7 Tagen pro Tag: Keine Rückerstattung</p>
         </div>
         <div class="button-container">
             <a href="/Mittagstisch/files/TarifNeu.pdf" class="title-signin button animated-link">
