added person to about

--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -60,6 +60,17 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
+                        <img src="/Mittagstisch/img/people/basler.jpg" alt="Regula Basler">
+                    </div>
+                    <div class="team-user-name">
+                        <h2>Regula Basler</h2>
+                        <p>Löst alle möglichen Kindersorgen – ruhig und mit viel Geduld.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-user">
+                <div class="team-user-container">
+                    <div class="team-user-img">
                         <img src="/Mittagstisch/img/people/melanie.png" alt="Melanie Hauri">
                     </div>
                     <div class="team-user-name">
