--- a/html/anmeldung.html
+++ b/html/anmeldung.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="stylesheet" href="/Mittagstisch/css/signin.css">
+    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="/css/signin.css">
     <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/Mittagstisch/js/main.js"></script>
-    <script src="/Mittagstisch/js/anmeldung.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/anmeldung.js"></script>
     <title>Anmeldung</title>
 </head>
 
@@ -185,30 +185,6 @@
                         15.30-17.30
                         <hr><br>
                     </div>
-
-                    <!-- Friday -->
-                    <!--<div class="form-days-friday-title form-days-title">
-                        <p for="form-days-friday">Freitag</p>
-                        <br>
-                    </div>
-                    <div class="form-days-container-friday form-days-table-container hidden">
-                        <br>
-                        <hr>
-                        <input type="checkbox" name="selectedDates[]" value="Freitag-Morgen" id="Freitag-Morgen">
-                        Frühbetreuung <br>
-                        6.30-8.00 Uhr <br> <br>
-                        <input type="checkbox" name="selectedDates[]" value="Freitag-Mittag" id="Freitag-Mittag">
-                        Mittagstisch <br>
-                        11.45-13.30 Uhr <br> <br>
-                        <input type="checkbox" name="selectedDates[]" value="Freitag-Nachmittag"
-                            id="Freitag-Nachmittag">
-                        Nachmittagsbetreuung 1<br>
-                        13.30-15.30 <br> <br>
-                        <input type="checkbox" name="selectedDates[]" value="Freitag-Abend" id="Freitag-Abend">
-                        Nachmittagsbetreuung 2<br>
-                        15.30-17.30
-                        <hr><br>
-                    </div>-->
                 </div>
                 <div class="small-break"></div>
                 <div class="form-date-container">
