--- a/html/anmeldung.html
+++ b/html/anmeldung.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/all.css">
-    <link rel="stylesheet" href="/css/signin.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
+    <link rel="stylesheet" href="/Mittagstisch/css/signin.css">
     <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/anmeldung.js"></script>
+    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="/Mittagstisch/js/anmeldung.js"></script>
     <title>Anmeldung</title>
 </head>
 
