--- a/html/anmeldung.html
+++ b/html/anmeldung.html
@@ -197,26 +197,33 @@
                 <div class="form-valid-container">
                     <div class="form-valid" required>
                         <h3>Gültig für:*</h3>
-                        <input type="checkbox" name="Semester_1" value="Semester_1">
+                        <input type="checkbox" name="Semester_1" value="Semester_1" id="Semester_1">
                         <label for="Semester_1">1. Semester</label>
                         <br>
-                        <input type="checkbox" name="Semester_2" value="Semester_2">
+                        <input type="checkbox" name="Semester_2" value="Semester_2" id="Semester_2">
                         <label for="Semester_2">2. Semester</label>
                         <br><br>
-                        <input type="checkbox" name="Quartal_1" value="Quartal_1">
+                        <input type="checkbox" name="Quartal_1" value="Quartal_1" id="Quartal_1">
                         <label for="Quartal_1">1. Quartal</label>
                         <br>
-                        <input type="checkbox" name="Quartal_2" value="Quartal_2">
+                        <input type="checkbox" name="Quartal_2" value="Quartal_2" id="Quartal_2">
                         <label for="Quartal_2">2. Quartal</label>
                         <br>
-                        <input type="checkbox" name="Quartal_3" value="Quartal_3">
+                        <input type="checkbox" name="Quartal_3" value="Quartal_3" id="Quartal_3">
                         <label for="Quartal_3">3. Quartal</label>
                         <br>
-                        <input type="checkbox" name="Quartal_4" value="Quartal_4">
+                        <input type="checkbox" name="Quartal_4" value="Quartal_4" id="Quartal_4">
                         <label for="Quartal_4">4. Quartal</label>
                         <br><br>
-                        <input type="checkbox" name="Flexibel" value="Flexibel">
+                        <input type="checkbox" name="Flexibel" value="Flexibel" id="Flexibel">
                         <label for="Flexibel">Flexibel</label>
+                    </div>
+                    <div class="valid-until">
+                        <label for="AutomatischeVerlängerung">
+                            Autmatische Verlängerung bis zur Abmeldung für weitere Jahre
+                        </label><br>
+                        <input type="checkbox" name="AutomatischeVerlängerung" value="AutomatischeVerlängerung" id="AutomatischeVerlängerung">
+                        <label for="AutomatischeVerlängerung">Flexibel</label>
                     </div>
                 </div>
                 <br><br>
