--- a/html/angebot.html
+++ b/html/angebot.html
@@ -44,27 +44,37 @@
             </div>
             <div class="text">
                 <div class="price-table">
-                    <p>
-                        Kosten für betreutes Essen pro Kind: CHF 20.00
-                    </p><br>
                     <table>
                         <thead>
                         <tr>
-                            <th colspan="2">Montag, Dienstag und Donnerstag</th>
+                            <th colspan="3">Montag, Dienstag und Donnerstag</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td>06.30 Uhr bis 08.00 Uhr, inklusive Frühstück</td>
+                            <td>Frühbetreuung</td>
+                            <td>06.30 - 08.00 Uhr, inkl Frühstück</td>
                             <td>CHF 17.00</td>
                         </tr>
                         <tr>
-                            <td>13.30 Uhr bis 15.30 Uhr, inklusive Zvieri</td>
+                            <td>Mittagstisch</td>
+                            <td>11:45 - 13:15 Uhr</td>
+                            <td>CHF 20.00</td>
+                        </tr>
+                        <tr>
+                            <td>Nachmittagsbetreuung I</td>
+                            <td>13:15 - 15:15 Uhr, inkl. Zvieri</td>
                             <td>CHF 22.00</td>
                         </tr>
                         <tr>
-                            <td>15.30 Uhr bis 17.30 Uhr, inklusive Zvieri</td>
+                            <td>Nachmittagsbetreuung II</td>
+                            <td>15.30 - 17.30 Uhr, inkl. Zvieri</td>
                             <td>CHF 22.00</td>
+                        </tr>
+                        <tr>
+                            <td>Mitgliederbeitrag</td>
+                            <td>Pro Semester und Familie</td>
+                            <td>CHF 20.00</td>
                         </tr>
                         </tbody>
                     </table>
