bug fixing anmeldung / standort

--- a/html/anmeldung.html
+++ b/html/anmeldung.html
@@ -217,13 +217,14 @@
                         <br><br>
                         <input type="checkbox" name="Flexibel" value="Flexibel" id="Flexibel">
                         <label for="Flexibel">Flexibel</label>
-                    </div>
-                    <div class="valid-until">
-                        <label for="AutomatischeVerlängerung">
-                            Autmatische Verlängerung bis zur Abmeldung für weitere Jahre
-                        </label><br>
-                        <input type="checkbox" name="AutomatischeVerlängerung" value="AutomatischeVerlängerung" id="AutomatischeVerlängerung">
-                        <label for="AutomatischeVerlängerung">Flexibel</label>
+                    </div><br><br>
+                    <label for="AutomatischeVerlaengerung">Darf mein Kind nach der Betreuung alleine nach
+                        Hause?</label><br>
+                    <div class="question-answer" required>
+                        <input type="radio" id="AutomatischeVerlaengerung-yes" name="AutomatischeVerlaengerung" value="yes">
+                        <label for="AutomatischeVerlaengerung-yes">Ja</label>
+                        <input type="radio" id="AutomatischeVerlaengerung-no" name="AutomatischeVerlaengerung" value="no">
+                        <label for="AutomatischeVerlaengerung-no">Nein</label>
                     </div>
                 </div>
                 <br><br>
