bug fixing anmeldung

--- a/html/anmeldung.html
+++ b/html/anmeldung.html
@@ -218,8 +218,7 @@
                         <input type="checkbox" name="Flexibel" value="Flexibel" id="Flexibel">
                         <label for="Flexibel">Flexibel</label>
                     </div><br><br>
-                    <label for="AutomatischeVerlaengerung">Darf mein Kind nach der Betreuung alleine nach
-                        Hause?</label><br>
+                    <label for="AutomatischeVerlaengerung">Die Anmeldung automatisch jedes Schuljahr verlängern?</label><br>
                     <div class="question-answer" required>
                         <input type="radio" id="AutomatischeVerlaengerung-yes" name="AutomatischeVerlaengerung" value="yes">
                         <label for="AutomatischeVerlaengerung-yes">Ja</label>
